--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
   <link rel="stylesheet" href="css/index.css">
   <link rel="stylesheet" href="css/social.css">
-  <link rel="stylesheet" href="css/fonts/font-awesome.css">
+  <link rel="stylesheet" href="css/fonts/font-awesome.min.css">
 </head>
 <body>
   <div id="app">
@@ -1160,7 +1160,7 @@ void main(void) {
     };
   })(window, 'equestAnimationFrame');
 </script>
-<script src="./js/vue.js"></script>
+<script src="./js/vue.min.js"></script>
 <script src="./js/vue-head.js"></script>
 <script src="./js/vue.me.js"></script>
 </html>
