Change color of lock

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <li>{{copyright}}</li>
             <li>
               <a href="javascript:void(0)" @click="lockClicked">
-                <i class="fa fa-lock" style="color:#00ff00" :class="{'fa-unlock-alt':authed}"></i>
+                <i class="fa fa-lock" style="color:rgb(255,192,203)" :class="{'fa-unlock-alt':authed}"></i>
               </a>
               <a href="javascript:void(0)" @click="musicClicked()">
                 <i class="fa fa-music" :style="{color:musicPlay?'#0093ce':'#aa0009'}" :class="{'fa-ban':!musicPlay}" aria-hidden="true"></i>
