--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
   <div id="app">
-    <audio id="bgm" :src="musicUrl" preload loop></audio>
+    <audio id="bgm" :src="musicUrl" preload loop muted></audio>
     <canvas id="sakura"></canvas>
     <!-- Wrapper -->
     <div id="wrapper">
