--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
     </div>
   </div>
 </body>
-<script src="./js/vue.min.js"></script>
-<script src="./js/vue-head.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/vue"></script>
+<script src="https://cdn.rawgit.com/ktquez/vue-head/master/vue-head.js"></script>
 <script src="./js/vue.me.js"></script>
 <script>
   if ('addEventListener' in window) {
