--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
   </div>
 </body>
 <script src="https://cdn.jsdelivr.net/npm/vue"></script>
-<script src="https://cdn.rawgit.com/ktquez/vue-head/master/vue-head.js"></script>
+<script src="./js/vue-head.js"></script>
 <script src="./js/vue.me.js"></script>
 <script>
   if ('addEventListener' in window) {
