--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     </div>
   </div>
 </body>
-<script src="https://cdn.jsdelivr.net/npm/vue"></script>
+<script src="https://cdn.jsdelivr.net/npm/vue@2.6.14"></script>
 <script src="./js/vue-head.js"></script>
 <script src="./js/vue.me.js"></script>
 <script>
